Add start of dnsmasq hack for nginx